amélioration du formatage dans les exemples de menus

--- a/site/D. Menu/02-menu-v2/index.html
+++ b/site/D. Menu/02-menu-v2/index.html
@@ -2537,8 +2537,6 @@
 <ul>
 <li>Github: <a href="https://github.com/profdenis/menu/tree/master/src/v2/Menu.java">v2/Menu.java</a></li>
 </ul>
-<details class="note">
-<summary>Code</summary>
 <div class="language-java highlight"><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="kn">package</span><span class="w"> </span><span class="nn">v2</span><span class="p">;</span>
 </span><span id="__span-0-2"><a id="__codelineno-0-2" name="__codelineno-0-2" href="#__codelineno-0-2"></a>
 </span><span id="__span-0-3"><a id="__codelineno-0-3" name="__codelineno-0-3" href="#__codelineno-0-3"></a><span class="kn">import</span><span class="w"> </span><span class="nn">java.util.Scanner</span><span class="p">;</span>
@@ -2635,7 +2633,6 @@
 </span><span id="__span-0-94"><a id="__codelineno-0-94" name="__codelineno-0-94" href="#__codelineno-0-94"></a><span class="w">    </span><span class="p">}</span>
 </span><span id="__span-0-95"><a id="__codelineno-0-95" name="__codelineno-0-95" href="#__codelineno-0-95"></a><span class="p">}</span>
 </span></code></pre></div>
-</details>
 <div class="admonition warning">
 <p class="admonition-title">Avertissement</p>
 <p>Cet exemple n&rsquo;est pas un programme complet, mais la deuxième version d&rsquo;un exemple de structure de menu pouvant 
@@ -2664,12 +2661,12 @@ les changements importants :</p>
 L&rsquo;option 1 du menu principal affiche le sous-menu une seule fois, tandis que l&rsquo;option 2 l&rsquo;affiche en boucle. Le code est
 également plus organisé avec des noms de méthodes plus descriptifs.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
 <p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+  <strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
+  structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
