--- a/site/D. Menu/01-menu-v1/index.html
+++ b/site/D. Menu/01-menu-v1/index.html
@@ -2537,8 +2537,6 @@
 <ul>
 <li>Github: <a href="https://github.com/profdenis/menu/tree/master/src/v1/Menu.java">v1/Menu.java</a></li>
 </ul>
-<details class="note">
-<summary>Code</summary>
 <div class="language-java highlight"><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="kn">package</span><span class="w"> </span><span class="nn">v1</span><span class="p">;</span>
 </span><span id="__span-0-2"><a id="__codelineno-0-2" name="__codelineno-0-2" href="#__codelineno-0-2"></a>
 </span><span id="__span-0-3"><a id="__codelineno-0-3" name="__codelineno-0-3" href="#__codelineno-0-3"></a><span class="kn">import</span><span class="w"> </span><span class="nn">java.util.Scanner</span><span class="p">;</span>
@@ -2587,7 +2585,6 @@
 </span><span id="__span-0-46"><a id="__codelineno-0-46" name="__codelineno-0-46" href="#__codelineno-0-46"></a><span class="w">    </span><span class="p">}</span>
 </span><span id="__span-0-47"><a id="__codelineno-0-47" name="__codelineno-0-47" href="#__codelineno-0-47"></a><span class="p">}</span>
 </span></code></pre></div>
-</details>
 <div class="admonition warning">
 <p class="admonition-title">Avertissement</p>
 <p>Cet exemple n&rsquo;est pas un programme complet, mais une première version d&rsquo;un exemple de structure de menu pouvant 
@@ -2636,12 +2633,12 @@ afficher le menu de façon répétée jusqu’à ce que l’utilisateur choisiss
 <p>En résumé, le programme affiche un menu, lit le choix de l’utilisateur, traite le choix et répète ce processus jusqu’à
 ce que l’utilisateur choisisse l’option « 4 » (Quitter).</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
 <p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+  <strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
+  structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
