corrections au format des citations et boîtes d'info pour uniformisation

--- a/site/B. Programmation OO/1. Les bases en OO/01-bases/index.html
+++ b/site/B. Programmation OO/1. Les bases en OO/01-bases/index.html
@@ -2964,12 +2964,12 @@ porte le même nom que la classe et initialise les attributs de l&rsquo;objet.</
 <p>Cette introduction aux concepts de base de la POO permet de comprendre comment les classes servent de modèles pour créer
 des objets qui contiennent à la fois des données (attributs) et des comportements (méthodes).</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em> 
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de 
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
