--- a/site/C. Figures géométriques/01-introduction/index.html
+++ b/site/C. Figures géométriques/01-introduction/index.html
@@ -2833,12 +2833,12 @@ dessiner les formes. Les versions ultérieures introduisent des classes pour les
 des méthodes d&rsquo;instance pour les dessiner. Elles démontrent aussi l&rsquo;utilisation des classes et méthodes abstraites, et
 d&rsquo;autres concepts orientés-objet comme le polymorphisme.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
