--- a/site/C. Figures géométriques/Version 2/Package shapes/04-rectangle/index.html
+++ b/site/C. Figures géométriques/Version 2/Package shapes/04-rectangle/index.html
@@ -3079,12 +3079,12 @@ clés :</p>
 <code>Square</code> et <code>Rectangle</code> se ressemblent beaucoup. <code>Square</code> simplifie la représentation d&rsquo;un carré en utilisant seulement
 la largeur et en déléguant le dessin à la classe <code>Rectangle</code>.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
