--- a/site/C. Figures géométriques/Version 2/Package shapes/05-polygon/index.html
+++ b/site/C. Figures géométriques/Version 2/Package shapes/05-polygon/index.html
@@ -2999,12 +2999,12 @@ segments connectés et ensuite dessine explicitement la ligne fermante avec
 <code>new Line(points[0], points[points.length - 1], drawColor).draw(image);</code>. Cela crée un polygone complet plutôt qu&rsquo;une
 simple ligne brisée.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-</div>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
