--- a/site/C. Figures géométriques/Version 2/Package shapes/06-cercle/index.html
+++ b/site/C. Figures géométriques/Version 2/Package shapes/06-cercle/index.html
@@ -2934,12 +2934,12 @@ simple pour dessiner le cercle point par point en exploitant les symétries du c
 </ol>
 <p>En dessinant ces 8 points à chaque itération, la méthode <code>draw</code> dessine efficacement un cercle complet.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
