--- a/site/B. Programmation OO/2. Héritage/03-toString/index.html
+++ b/site/B. Programmation OO/2. Héritage/03-toString/index.html
@@ -3130,12 +3130,12 @@ nous redéfinissons la méthode <code>toString()</code> héritée de la classe <
 <p>Cette capacité à traiter différents types d&rsquo;objets de manière uniforme tout en conservant leur comportement spécifique
 est l&rsquo;essence même du polymorphisme.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em> 
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de 
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
