--- a/site/B. Programmation OO/3. Classes et méthodes abstraites/01-abstract/index.html
+++ b/site/B. Programmation OO/3. Classes et méthodes abstraites/01-abstract/index.html
@@ -3039,12 +3039,12 @@ implémenter la méthode <code>demarrer()</code> :</p>
 créer une nouvelle classe qui hérite de <code>Vehicule</code> et implémente <code>demarrer()</code>.une nouvelle classe qui hérite de <code>Forme</code>
 et implémente <code>calculerAire()</code>.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em> 
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de 
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
