--- a/site/B. Programmation OO/5. Diagrammes de classe/02-exemples/index.html
+++ b/site/B. Programmation OO/5. Diagrammes de classe/02-exemples/index.html
@@ -3124,12 +3124,12 @@ des animaux :</p>
 et deux classes concrètes <code>Dauphin</code> et <code>Chauve_Souris</code> qui étendent <code>Animal</code> et implémentent chacune une interface 
 spécifique.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em> 
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de 
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
