--- a/site/C. Figures géométriques/Version 1/03-image/index.html
+++ b/site/C. Figures géométriques/Version 1/03-image/index.html
@@ -2943,12 +2943,12 @@ image en mémoire.</p>
 créer, manipuler et enregistrer des images. Elle masque la complexité de <code>BufferedImage</code> et offre des fonctionnalités de
 base pour le dessin, comme la définition de pixels et l&rsquo;effacement de l&rsquo;image.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em> 
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de 
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
