--- a/site/C. Figures géométriques/Version 2/01-introduction/index.html
+++ b/site/C. Figures géométriques/Version 2/01-introduction/index.html
@@ -2828,12 +2828,12 @@ classe <code>Shapes</code> gére toutes les opérations de dessin directement vi
 extensible. Les deux versions enregistrent ultimement l&rsquo;image résultante dans un fichier, mais la version 2 offre
 une meilleure structure de code et une meilleure maintenabilité.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
