--- a/site/C. Figures géométriques/Version 2/Package shapes/01-introduction/index.html
+++ b/site/C. Figures géométriques/Version 2/Package shapes/01-introduction/index.html
@@ -2822,12 +2822,12 @@ lignes, des triangles, des rectangles, des carrés, des cercles et des polygones
 dessiner les formes sur une image en spécifiant leurs propriétés comme la position, la taille et la couleur. Chaque
 classe de forme a ses propres méthodes pour dessiner la forme sur une image donnée.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
