--- a/site/C. Figures géométriques/Version 2/Package shapes/02-point/index.html
+++ b/site/C. Figures géométriques/Version 2/Package shapes/02-point/index.html
@@ -2897,12 +2897,12 @@ y, ainsi que pour sa couleur de dessin.</p>
 <p>En résumé, la classe <code>Point</code> fournit une représentation simple d&rsquo;un point avec des coordonnées et une couleur, ainsi que
 des méthodes pour accéder à ces propriétés et dessiner le point sur une image.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
