--- a/site/C. Figures géométriques/Version 3/02-point/index.html
+++ b/site/C. Figures géométriques/Version 3/02-point/index.html
@@ -2969,12 +2969,12 @@ des coordonnées :</p>
 <p>En résumé, la version 3 de <code>Point</code> est plus robuste et mieux intégrée à la hiérarchie des formes grâce à l&rsquo;héritage de
 <code>Shape</code>. La validation des coordonnées améliore également la qualité du code.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
