--- a/site/C. Figures géométriques/Version 3/03-cercle/index.html
+++ b/site/C. Figures géométriques/Version 3/03-cercle/index.html
@@ -2981,12 +2981,12 @@ l&rsquo;algorithme de dessin :</p>
 <p>En résumé, la version 3 de <code>Circle</code> bénéficie de l&rsquo;héritage de <code>Shape</code> pour une meilleure structure du code.
 L&rsquo;utilisation de l&rsquo;algorithme de Bresenham améliore significativement les performances et la précision du dessin.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
