--- a/site/C. Figures géométriques/Version 3/04-polymorphisme/index.html
+++ b/site/C. Figures géométriques/Version 3/04-polymorphisme/index.html
@@ -2947,12 +2947,12 @@ appelée automatiquement en fonction du type réel de l&rsquo;objet.</p>
 méthode <code>draw()</code> appropriée pour chaque forme (celle de <code>Point</code>, celle de <code>Circle</code>, etc.). C&rsquo;est la puissance du
 polymorphisme.</p>
 <hr />
-<div class="admonition note">
-<p class="admonition-title">Note</p>
-<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA, principalement à l&rsquo;aide de Perplexity AI, avec le <em>LLM</em>
-<strong>Claude 3.5 Sonnet</strong>. L&rsquo;IA a été utilisée pour générer des explications, des exemples et/ou des suggestions de
-structure. Toutes les informations ont été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
-</div>
+<details class="info">
+<summary>Utilisation de l&rsquo;IA</summary>
+<p>Page rédigée en partie avec l&rsquo;aide d&rsquo;un assistant IA. L&rsquo;IA a été utilisée pour générer des 
+explications, des exemples et/ou des suggestions de structure. Toutes les informations ont 
+été vérifiées, éditées et complétées par l&rsquo;auteur.</p>
+</details>
 
 
 
